# trello-agents

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  implementation_plan.md  projects.yaml.example  pyproject.toml
calculator/: __init__.py  calc.py
calculator/tests/: test_calc.py
deploy/: docker-compose.traefik.yml
scripts/: deploy-feature.sh  teardown-feature.sh
src/agents_trello/: __init__.py  app.py  backfill.py  cli.py  config.py  project.py
src/agents_trello/adapters/agent/: prompts.py  runner.py
src/agents_trello/adapters/deploy/: __init__.py  manager.py
src/agents_trello/adapters/github/: client.py  webhook_route.py
src/agents_trello/domain/: __init__.py  events.py  models.py  provider.py
src/agents_trello/infra/: __init__.py  db.py  event_log.py  locks.py  logging.py  notify.py
templates/: board.html  deploy-preview.yml  notify-merge.yml
tests/: test_config_projects.py  test_placeholder.py  test_project_registry.py
tests/adapters/agent/: test_runner.py
tests/adapters/github/: __init__.py  test_client.py  test_webhook.py
tests/adapters/inmemory/: test_provider_events.py
tests/adapters/local/: test_sqlite_provider.py
tests/adapters/trello/: test_mapping.py  test_signature.py  test_webhook_route.py
tests/adapters/worktree/: test_manager.py
tests/domain/: test_handlers_on_comment.py  test_handlers_on_move.py
tests/fixtures/: trello_comment_card.json  trello_create_card.json  trello_update_card_move.json  trello_update_card_rename.json
tests/infra/: test_db.py  test_locks.py
(+15 files in other folders)
